
2012-03-04:

	callmonitor-1.20

	* config.sh: Aktion "config wlan guest [on|off]" schaltet Gast-WLAN

2012-03-05:

	* adaffix.sh: Neue Rückwärtssuche bei m.adaffix.com
	* anywho.sh: Rückwärtssuche bei AnyWho entfernt

2012-03-11:

	callmonitor-1.20.1

2012-11-10:

	* reverse: Kleines Kommandozeilenprogramm zur Fehler- bei der
	Rückwärtssuche. Basisversion.

2012-11-15:

	* dasoertliche: Nichterkennung von "fetten" Einträgen behoben (Dank an
	knesi)
	* 11880: Bewertung aus Ergebnis entfernt

	callmonitor-1.20.2

2013-01-12:

	* webui: Neue Mehrbenutzerverwaltung ab Fritz!OS 5.50 wird unterstützt;
	beseitigt verschiedene Fehler ("Müll" in den Standortangaben,
	fehlende Null bei der Rückwärtssuche, keine Berücksichtigung des
	AVM-Telefonbuchs)
	
	Falls mit mehreren Benutzerkonten gearbeitet wird, muss einmalig der
	Benutzername eingestellt werden, den der Callmonitor zum Zugriff auf
	die Weboberfläche verwenden soll (um z.B. das Telefonbuch abzurufen).

	Achtung: Noch wenig getestet!

	* config: Umstellung auf ctlmgr_ctl, wo möglich

	callmonitor-1.20.3 (beta)

2013-01-13:

	* web: Kosmetische Korrekturen
	* webui: Kleine Änderung in der Reihenfolge der Parameter

	callmonitor-1.20.4 (beta)

2013-01-27:

	Kleinere Fehler bereinigt

	callmonitor-1.20.5 (beta)

2013-02-01:

	* reverse: DasÖrtliche repariert, adaffix entfernt

2013-02-03:

	callmonitor-1.20.6 (beta)

2013-02-04:

	* config: Hilfe-Links repariert (Danke, Whoopie!)

2013-02-05:

	* if_jfritz_status: nc mit NC_110_COMPAT hing, mit ihm das
	Callmonitor-Webinterface

2013-02-10:

	* 60-credentials: Status-Anzeige und ein paar erklärende Worte

	callmonitor-1.20.7 (beta)

2013-02-23:

	* webui: Die vom Callmonitor benutzte IP-Adresse ist über
	CALLMONITOR_REMOTE_ADDR einstellbar.

	callmonitor-1.20.8 (beta)

	* webui: Neue Voreinstellung einer (simulierten) IP-Adresse aus dem
	"Heimnetz" könnte die Login-Probleme auf der 7390 lösen.

2013-02-24:

	callmonitor-1.20.9 (beta)